--- a/v2/random-players-random_forest.ipynb
+++ b/v2/random-players-random_forest.ipynb
@@ -26,49 +26,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# def generate_random_player_within_rate():\n",
-    "#     rate = np.random.choice([1, 2, 3, 4])\n",
-    "#     if rate == 1:\n",
-    "#             player = {\n",
-    "#                 'PYD': np.random.uniform(3000, 6000),\n",
-    "#                 'TD': np.random.uniform(5, 60),\n",
-    "#                 'CMP%': np.random.uniform(40, 90), \n",
-    "#                 'Y/A': np.random.uniform(4, 11),\n",
-    "#                 'RUSH': np.random.uniform(0, 1200),\n",
-    "#                 'Real Rate': rate\n",
-    "#             }\n",
-    "#     elif rate == 2:\n",
-    "#             player = {\n",
-    "#                 'PYD': np.random.uniform(2500, 4000),\n",
-    "#                 'TD': np.random.uniform(5, 60),\n",
-    "#                 'CMP%': np.random.uniform(40, 90),\n",
-    "#                 'Y/A': np.random.uniform(4, 11),\n",
-    "#                 'RUSH': np.random.uniform(0, 1200),\n",
-    "#                 'Real Rate': rate\n",
-    "#             }\n",
-    "#     elif rate == 3:\n",
-    "#             player = {\n",
-    "#                 'PYD': np.random.uniform(1000, 3500),\n",
-    "#                 'TD': np.random.uniform(5, 60),\n",
-    "#                 'CMP%': np.random.uniform(40, 90),\n",
-    "#                 'Y/A': np.random.uniform(4, 11),\n",
-    "#                 'RUSH': np.random.uniform(0, 1200),\n",
-    "#                 'Real Rate': rate\n",
-    "#             }\n",
-    "#     else:\n",
-    "#             player = {\n",
-    "#                 'PYD': np.random.uniform(500, 3200),\n",
-    "#                 'TD': np.random.uniform(5, 60),\n",
-    "#                 'CMP%': np.random.uniform(40, 90),\n",
-    "#                 'Y/A': np.random.uniform(4, 11),\n",
-    "#                 'RUSH': np.random.uniform(0, 1200),\n",
-    "#                 'Real Rate': rate\n",
-    "#             }\n",
-    "        \n",
-    "#     return player\n",
-    "\n",
-    "def generate_random_player_with_new_ranges():\n",
-    "    rate = np.random.choice([1, 2, 3, 4])  # Elegimos un Rate al azar para generar el jugador\n",
+    "def generate_random_player():\n",
+    "    rate = np.random.choice([1, 2, 3, 4])\n",
     "\n",
     "    if rate == 1:\n",
     "        player = {\n",
@@ -97,7 +56,7 @@
     "            'RUSH': np.random.uniform(1.1104410139795018, 967.0187958884312),\n",
     "            'Real Rate': rate\n",
     "        }\n",
-    "    else:  # rate == 4\n",
+    "    else:\n",
     "        player = {\n",
     "            'PYD': np.random.uniform(1005.2091742763856, 3111.6465123651124),\n",
     "            'TD': np.random.uniform(10.04400741933955, 49.941814717326906),\n",
@@ -117,8 +76,7 @@
    "outputs": [],
    "source": [
     "X_players = 1000\n",
-    "# players_data = [generate_random_player_within_rate() for _ in range(X_players)]\n",
-    "players_data = [generate_random_player_with_new_ranges() for _ in range(X_players)]"
+    "players_data = [generate_random_player() for _ in range(X_players)]"
    ]
   },
   {
@@ -223,15 +181,6 @@
    ],
    "source": [
     "print(\"Accuracy: \", comparison_counts['Correct'] / (comparison_counts['Correct'] + comparison_counts['Incorrect']))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1069,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# df_players['Integer Comparison'] = np.where(df_players['Predicted Rate'] == df_players['Real Rate'], 'Correct', 'Incorrect')"
    ]
   },
   {
